--- a/io/pom.xml
+++ b/io/pom.xml
@@ -11,6 +11,34 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <cdk.version>RELEASE</cdk.version>
   </properties>
+  
+  <build>
+  	<plugins>
+  		<plugin>
+  			<artifactId>maven-assembly-plugin</artifactId>
+  			<version>2.4</version>
+  			<configuration>
+  				<archive>
+  					<manifest>
+  						<mainClass>tools.io.App</mainClass>
+  					</manifest>
+  				</archive>
+  				<descriptorRefs>
+  					<descriptorRef>jar-with-dependencies</descriptorRef>
+  				</descriptorRefs>
+  			</configuration>
+  			<executions>
+  				<execution>
+  					<id>make-assembly</id>
+  					<phase>package</phase>
+  					<goals>
+  						<goal>single</goal>
+  					</goals>
+	  			</execution>
+  			</executions>
+  		</plugin>
+  	</plugins>
+  </build>
 
   <dependencies>
    <dependency>
