--- a/io/pom.xml
+++ b/io/pom.xml
@@ -42,6 +42,11 @@
 
   <dependencies>
    <dependency>
+        <groupId>org.openscience.cdk-tools</groupId>
+        <artifactId>core</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+   </dependency>
+   <dependency>
         <groupId>org.openscience.cdk</groupId>
         <artifactId>cdk-io</artifactId>
         <version>${cdk.version}</version>
