Make depict dependent on core, so that it can use the base argument handler

--- a/depict/pom.xml
+++ b/depict/pom.xml
@@ -66,5 +66,10 @@
         <artifactId>cdk-data</artifactId>
         <version>${cdk.version}</version>
     </dependency>
+        <dependency>
+        <groupId>org.openscience.cdk-tools</groupId>
+        <artifactId>core</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 </project>
