Refactoring of the i/o handling

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
   	<module>convert</module>
   	<module>depict</module>
   	<module>core</module>
+  	<module>match</module>
   </modules>
   
    <dependencies>
