--- a/core/pom.xml
+++ b/core/pom.xml
@@ -6,4 +6,16 @@
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>core</artifactId>
+  <dependencies>
+    <dependency>
+        <groupId>org.openscience.cdk</groupId>
+        <artifactId>cdk-smiles</artifactId>
+        <version>${cdk.version}</version>
+    </dependency>
+    <dependency>
+        <groupId>org.openscience.cdk</groupId>
+        <artifactId>cdk-data</artifactId>
+        <version>${cdk.version}</version>
+    </dependency>
+  </dependencies>
 </project>
