Fixes to match, as well as moving to isomorphism.Pattern rather than UIT

--- a/match/pom.xml
+++ b/match/pom.xml
@@ -6,7 +6,41 @@
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>match</artifactId>
+  
+  <build>
+    <plugins>
+        <plugin>
+            <artifactId>maven-assembly-plugin</artifactId>
+            <version>2.4</version>
+            <configuration>
+                <archive>
+                    <manifest>
+                        <mainClass>tools.match.App</mainClass>
+                    </manifest>
+                </archive>
+                <descriptorRefs>
+                    <descriptorRef>jar-with-dependencies</descriptorRef>
+                </descriptorRefs>
+            </configuration>
+            <executions>
+                <execution>
+                    <id>make-assembly</id>
+                    <phase>package</phase>
+                    <goals>
+                        <goal>single</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
+    </plugins>
+  </build>
+  
   <dependencies>
+     <dependency>
+        <groupId>org.openscience.cdk</groupId>
+        <artifactId>cdk-smsd</artifactId>
+        <version>${cdk.version}</version>
+     </dependency>
     <dependency>
         <groupId>org.openscience.cdk-tools</groupId>
         <artifactId>core</artifactId>
