--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,21 @@
   	<module>depict</module>
   	<module>core</module>
   	<module>match</module>
+  	<module>enumerate</module>
   </modules>
+  
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.6</source>
+          <target>1.6</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
   
    <dependencies>
     <dependency>
