Fixes to the enumerate module

--- a/enumerate/pom.xml
+++ b/enumerate/pom.xml
@@ -41,6 +41,11 @@
   </build>
 
   <dependencies>
+    <dependency>
+        <groupId>org.openscience.cdk</groupId>
+        <artifactId>cdk-structgen</artifactId>
+        <version>${cdk.version}</version>
+    </dependency>
    <dependency>
         <groupId>org.openscience.cdk</groupId>
         <artifactId>cdk-io</artifactId>
